# gopro-telem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt  gpmf-dump.cpp  gpmf2csv.cpp  gpmfdump.cpp
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  FourCC.cpp  GPMF_ErrorUtils.cpp  GPMF_ErrorUtils.h  GPMF_Payload.cpp  GPMF_Stream.cpp  GoProTelem.cpp  MP4_Source.cpp  Math.cpp  SampleMath.cpp  SampleTypes.cpp
src/include/: GoProTelem.h  Math.h  version.h.in
src/include/GoProTelem/: FourCC.h  GPMF_Payload.h  GPMF_Stream.h  GoProTelem.h  MP4_Source.h  SampleMath.h  SampleTypes.h  Types.h
src/matlab/: pose_fun.m  smooth.m  telem_fun.m
src/matlab/+gpmf/: readcsv.m
test/: CMakeLists.txt  GoProTelemTest.cpp  GoProTelemTest.h  MP4_SourceTest.cpp  MP4_SourceTest.h  MathTest.cpp  MathTest.h  SampleMathTest.cpp  SampleMathTest.h
test/test_videos/hero9/accl_orientation/: README.md
